# docs/swagger.json
@@ -36,7 +36,12 @@
                     "200": {
                         "description": "Successfully generated token",
                         "schema": {
-                            "$ref": "#/definitions/response.Envelope"
+                            "type": "object",
+                            "properties": {
+                                "data": {
+                                    "$ref": "#/definitions/dto.GenerateTokenResponse"
+                                }
+                            }
                         }
                     },
                     "400": {
@@ -88,7 +93,12 @@
                     "200": {
                         "description": "Successfully retrieved subscriptions",
                         "schema": {
-                            "$ref": "#/definitions/response.Envelope"
+                            "type": "object",
+                            "properties": {
+                                "data": {
+                                    "$ref": "#/definitions/dto.ListSubscriptionsResponse"
+                                }
+                            }
                         }
                     },
                     "401": {
@@ -137,7 +147,12 @@
                     "201": {
                         "description": "Successfully created subscription",
                         "schema": {
-                            "$ref": "#/definitions/response.Envelope"
+                            "type": "object",
+                            "properties": {
+                                "data": {
+                                    "$ref": "#/definitions/dto.CreateSubscriptionResponse"
+                                }
+                            }
                         }
                     },
                     "400": {
@@ -189,7 +204,12 @@
                     "200": {
                         "description": "Successfully retrieved subscription status",
                         "schema": {
-                            "$ref": "#/definitions/response.Envelope"
+                            "type": "object",
+                            "properties": {
+                                "data": {
+                                    "$ref": "#/definitions/dto.IsUserSubscriptionActiveResponse"
+                                }
+                            }
                         }
                     },
                     "401": {
@@ -235,7 +255,12 @@
                     "201": {
                         "description": "Successfully created user",
                         "schema": {
-                            "$ref": "#/definitions/response.Envelope"
+                            "type": "object",
+                            "properties": {
+                                "data": {
+                                    "$ref": "#/definitions/dto.CreateUserResponse"
+                                }
+                            }
                         }
                     },
                     "422": {
@@ -327,7 +352,12 @@
                     "200": {
                         "description": "Successfully found user",
                         "schema": {
-                            "$ref": "#/definitions/response.Envelope"
+                            "type": "object",
+                            "properties": {
+                                "data": {
+                                    "$ref": "#/definitions/dto.FindUserResponse"
+                                }
+                            }
                         }
                     },
                     "401": {
@@ -434,6 +464,32 @@
                 }
             }
         },
+        "dto.CreateSubscriptionResponse": {
+            "type": "object",
+            "properties": {
+                "auto_renew": {
+                    "type": "boolean"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "plan_id": {
+                    "type": "integer"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "subscription_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.CreateUserRequest": {
             "type": "object",
             "properties": {
@@ -448,6 +504,31 @@
                 }
             }
         },
+        "dto.CreateUserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.FindUserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.GenerateTokenRequest": {
             "type": "object",
             "properties": {
@@ -456,6 +537,59 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.GenerateTokenResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.IsUserSubscriptionActiveResponse": {
+            "type": "object",
+            "properties": {
+                "is_active": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "dto.ListSubscriptionsResponse": {
+            "type": "object",
+            "properties": {
+                "subscriptions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.SubscriptionResponse"
+                    }
+                }
+            }
+        },
+        "dto.SubscriptionResponse": {
+            "type": "object",
+            "properties": {
+                "auto_renew": {
+                    "type": "boolean"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "plan_id": {
+                    "type": "integer"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "subscription_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -505,10 +639,6 @@
                     "type": "string"
                 }
             }
-        },
-        "response.Envelope": {
-            "type": "object",
-            "additionalProperties": {}
         }
     },
     "securityDefinitions": {
